fix next times sheet height on safari

--- a/src/components/NextTimesSheet/styles.module.css
+++ b/src/components/NextTimesSheet/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  max-height: 42.1875em;
+  max-height: 85vh;
   background-color: inherit;
   display: flex;
   flex-direction: column;
